# Hermes-Elysium-Qt

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  GROC_SUMMARY.md  LICENSE  PLAN.md  README.md  hermes-elysium  hermes-elysium.desktop  run.sh  shared-tasks.json
.hermes/plans/: 2026-05-16-telemetry-terminal-polish.md
scripts/: full_system_test.py  start_hermes_full.sh  welcome_sequence.py
src/: STT_MIGRATION.md  api_client.py  auto_updater.py  backend_router.py  conductor.py  conductor_panel.py  config_reader.py  custom_vocabulary.txt  farm_manager.py  health_monitor.py  konsole_embed.py  main.py  main.py.bak  persona_panel.py  profile_dialogs.py  profile_loader.py  profiles_manager.py  providers_panel.py  qtermwidget_bridge.cpp  sessions_manager.py  terminal_embed.py  terminal_panel.cpp  terminal_panel.h  terminal_session.py  test_stt.py  voice.py  voice_improved.py
